--- a/discount/templates/index.html
+++ b/discount/templates/index.html
@@ -72,8 +72,9 @@ home
               <div class="card-body">
                   <p  class="card-text">{{i.title}}</p>
                 <div class="d-flex justify-content-between align-items-center">
-                  <small class="text-muted">{{i.rating}}</small>
+                  <small class="text-muted">{{i.rating}} </small>
                 </div>
+                <a href="{% url 'product_detail' i.id %}" >Detail</a>
               </div>
             </div>
           </div>
